# HTP

./: .cvsignore  HEADER  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  gettimeofday.c  gettimeofday.h  htp.c  htp.h  htpd.8.in  htpd.c  htpd.conf  htpd.conf.5.in  htpdate-0.1-settime.diff  htpdate.8.in  htpdate.c  makearch.info  settimeofday.c  settimeofday.h  win32.h
.fossil-settings/: ignore-glob
htpdate-0.1/: Makefile  htp.c  htp.h  htpdate-0.1.c
htpdate-0.1.orig/: Makefile  htpdate-0.1.c
